Make sure the child shell list is still on the SHEntry when we call DocumentViewer::OpenWithEntry, since it uses that list to reattach the document container (bug 347426) r+sr=bzbarsky a=schrep